@@ -9,6 +9,7 @@
 * Reset metadata before setting new value.
 * Fix min/max filter option values for int and int64 type.
 * Add flush API to avfilter.
+* Add support for data streams.
 
 1.1.7 (2023-02-08)
 =====
